 * Added more informative error message when `|richtext` filter is applied to a non-string value (mukesh5)
 * Automatic search indexing can now be disabled on a per-model basis via the `search_auto_update` attribute (Karl Hobley)
 * Improved diffing of StreamFields when comparing page revisions (Karl Hobley)
 * Fix: Set `SERVER_PORT` to 443 in `Page.dummy_request()` for HTTPS sites (Sergey Fedoseev)
 * Fix: Include port number in `Host` header of `Page.dummy_request()` (Sergey Fedoseev)
 * Fix: Validation error messages in `InlinePanel` no longer count towards `max_num` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
 * Fix: Rich text to contentstate conversion now ignores stray closing tags (frmdstryr)
 * Fix: Escape backslashes in `postgres_search` queries (Hammy Goonan)
 * Fix: Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)


2.4 (19.12.2018)
~~~~~~~~~~~~~~~~

 * Added support for Python 3.7 (Matt Westcott)
 * Added `max_count` option on page models to limit the number of pages of a particular type that can be created (Dan Braghis)
 * Document and image choosers now show the document / image's collection (Alejandro Garza, Janneke Janssen)
 * Added new "Welcome to your Wagtail site" Starter Page when using wagtail start command (Timothy Allen, Scott Cranfill)
 * Added ability to run individual tests through tox (Benjamin Bach)
 * Collection listings are now ordered by name (Seb Brown)
 * Added `file_hash` field to documents (Karl Hobley, Dan Braghis)
 * Added last login to the user overview (Noah B Johnson)
 * Changed design of image editing page (Janneke Janssen, Ben Enright)
 * Added Slovak character map for JavaScript slug generation (Andy Chosak)
 * Make documentation links on welcome page work for prereleases (Matt Westcott)
 * Allow overridden `copy()` methods in `Page` subclasses to be called from the page copy view (Robert Rollins)