@@ -56,14 +56,14 @@ exports[`Document no data 1`] = `
   icon={
     <Icon
       className={null}
-      name="doc-full"
+      name="warning"
       title={null}
     />
   }
-  label=""
+  label="Missing document"
   onEdit={[Function]}
   onRemove={[Function]}
-  url=""
+  url={null}
 >
   test
 </TooltipEntity>
