@@ -49,6 +49,8 @@
                 SHOW_LATEST_CONTENT: "{% trans 'Show latest content' %}",
                 SHOW_ERROR: "{% trans 'Show error' %}",
                 EDITOR_CRASH: "{% trans 'The editor just crashed. Content has been reset to the last saved version.' %}",
+                BROKEN_LINK: "{% trans 'Broken link' %}",
+                MISSING_DOCUMENT: "{% trans 'Missing document' %}"
             };
 
             wagtailConfig.ADMIN_URLS = {
